@@ -108,3 +108,6 @@ $_lang['clientconfig.global_values'] = 'Global';
 $_lang['clientconfig.config_for_context'] = 'Configuration for [[+context]]';
 $_lang['clientconfig.categories'] = 'Categories';
 $_lang['clientconfig.process_options'] = 'Process tags in options';
+
+// New 2019-10-24
+$_lang['clientconfig.xtype.line'] = 'Line (divider)';
